--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
 
   <header>
     <h1>Welcome to My Website</h1>
-    <p>Copy paste se banayi gayi website 😄</p>
+<p>This is my personal website</p>
   </header>
 
   <section>
     <h2>About Me</h2>
-    <p>Main bina coding seekhe website bana raha hoon</p>
+   <p>Welcome to The We Bone</p>
+
     <button>Contact Me</button>
   </section>
 
@@ -52,3 +53,4 @@
 
 </body>
 </html>
+
