--- a/index.html
+++ b/index.html
@@ -1,56 +1,26 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Meri Website</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial;
-      background-color: #f2f2f2;
-      text-align: center;
-    }
-    header {
-      background-color: #222;
-      color: white;
-      padding: 30px;
-    }
-    section {
-      padding: 40px;
-    }
-    button {
-      padding: 12px 20px;
-      background-color: green;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      font-size: 16px;
-    }
-    footer {
-      background-color: #222;
-      color: white;
-      padding: 15px;
-    }
-  </style>
-</head>
+<header style="background:linear-gradient(to right,#000428,#004e92);color:white;padding:60px;">
+  <h1 style="font-size:40px;margin-bottom:10px;">THE WE BONE</h1>
+  <p style="font-size:18px;">Simple • Clean • Professional</p>
+  <a href="#about">
+    <button style="margin-top:20px;padding:12px 25px;font-size:16px;border:none;border-radius:25px;background:#ff9800;color:black;">
+      Explore
+    </button>
+  </a>
+</header>
+<section id="about" style="background:white;padding:50px;">
+  <h2 style="font-size:28px;">Welcome</h2>
+  <p style="max-width:600px;margin:auto;font-size:16px;">
+    This is a modern website created to showcase ideas, work, and creativity.
+  </p>
 
-<body>
+  <img src="https://via.placeholder.com/250"
+       style="margin-top:25px;border-radius:15px;">
 
-  <header>
-    <h1>Welcome to My Website</h1>
-<p>This is my personal website</p>
-  </header>
+  <br><br>
 
-  <section>
-    <h2>About Me</h2>
-   <p>Welcome to The We Bone</p>
-
-    <button>Contact Me</button>
-  </section>
-
-  <footer>
-    <p>© 2026 My Website</p>
-  </footer>
-
-</body>
-</html>
-
+  <a href="https://wa.me/919999999999">
+    <button style="padding:12px 22px;background:#25D366;color:white;border:none;border-radius:20px;">
+      WhatsApp Me
+    </button>
+  </a>
+</section>
